--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid col-md-offset-1 col-md-10">
-			
+			<h4><STRONG>#</STRONG>Find<STRONG>Hashtag</STRONG></h4>
 		</div>
 	</nav>
 
@@ -33,7 +33,10 @@
 			<div id="instagram"></div>
 		</div>
 	</div>
-	
+
+
+	<footer class="navbar-fixed-bottom"><p>powered by <strong>Lucas Nogueira</strong> - version 0.0.1</p>
+	</footer>
 
 	<script type="text/javascript">
 	function search(){
