--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Find Hastag</title>
 	<script src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="http://momentjs.com/downloads/moment.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,6 +21,7 @@
 			<div class="busca col-md-offset-3 col-md-6">
 				<label></label><br>
 				<div class="input-group">
+					<span class="input-group-addon" id="basic-addon1">#</span>
 					<input id="hashtag" class="form-control" type="text" placeholder="insira uma hashtag">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" onclick="search()">Buscar</button>
@@ -35,7 +37,7 @@
 	</div>
 
 
-	<footer class="navbar-fixed-bottom"><p>powered by <strong>Lucas Nogueira</strong> - version 0.0.1</p>
+	<footer class="navbar-fixed-bottom"><p>powered by <strong>Lucas Nogueira</strong> - version 0.1.0</p>
 	</footer>
 
 	<script type="text/javascript">
@@ -52,15 +54,23 @@
 			url: "https://api.instagram.com/v1/tags/" + hashtag + "/media/recent?client_id=6733d5f2ae4345c9a3e73be491f4293c",
 			success: function(data)  {
 				for (var i = 0; i < 20; i++) {
-					//console.log(data.data[i]);
-					$("#instagram").append("<div class='card'><a href='" + data.data[i].link +"' target='_blank'><img class='md-col-6' alt='"+ data.data[i].user.username +"' src='" + data.data[i].images.standard_resolution.url +"' ></a><br><p>@"+data.data[i].user.username+"<br><small> via instagram</small></p></div>");
+					console.log(data.data[i]);
+
+					var date = new Date(data.data[i].created_time * 1000);
+					var months = ['Jan','Fev','Mar','Abr','Mai','Jun','Jul','Aug','Set','Out','Nov','Dec'];
+					var year = date.getFullYear();
+					var month = months[date.getMonth()];
+					var date = date.getDate();
+					var time = date+' de '+ month+' de '+year ;
+
+					$("#instagram").append("<div class='card'><a href='" + data.data[i].link +"' target='_blank'><img class='md-col-6' alt='"+ data.data[i].user.username +"' src='" + data.data[i].images.standard_resolution.url +"' ></a><br><p>@"+data.data[i].user.username+"<small><br> "+ time +" - via instagram</small></p></div>");
                 	//$("#instagram").append("<figure class='thumb_instagram img-rounded'><a href='" + data.data[i].link +"' target='_blank'><img alt='"+ data.data[i].user.username +"' src='" + data.data[i].images.thumbnail.url +"' ></a><figcaption class='cor'><a>@"+ data.data[i].user.full_name +"</a></figcaption></figure>");
                 }
             }
         });
-	}
-	
-	</script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+}
+
+</script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
