--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 	<div class="row">
 		<div class="col-md-offset-1 col-md-10 container">
 
-			<div class="busca col-md-offset-3 col-md-6">
+			<form class="busca col-md-offset-3 col-md-6">
 				<label></label><br>
 				<div class="input-group">
 					<span class="input-group-addon" id="basic-addon1">#</span>
 					<input id="hashtag" class="form-control" type="text" placeholder="put a hashtag">
-					<span class="input-group-btn">
-						<button class="btn btn-primary" onclick="search()">Buscar</button>
+					<span id="search" class="input-group-btn">
+						<input type="submit" class="btn btn-primary" onclick="search()">Buscar</input>
 					</span>
 
 				</div>			
 				<p class="help-block">example: nofilter, vemprarua, ficaadica...</p>
-			</div>			
+			</form>			
 		</div>
 	</div>
 	<div class="row">
@@ -43,11 +43,17 @@
 	</footer>
 
 	<script type="text/javascript">
+	$("form").submit(function() {return false; });
+
 	function search(){
-		console.log();
+		<!-- desabilitar botão -->
+		$("#search").empty();
+		$("#search").append("<input type='submit' class='btn btn-primary'  disabled='disabled'>Buscar</input>");
+
+
 		var hashtag = $("#hashtag").val();
 		$("#instagram").empty();
-		data = [];
+		$("#instagram").append("<span class='bg-warning col-md-offset-5'> <span class='glyphicon glyphicon-refresh' aria-hidden='true'></span> Loading</span>");
 
 		if(hashtag == ""){
 			$("#instagram").append("<span class='bg-warning col-md-offset-5'> <span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> Invalid tag</span>");
@@ -59,12 +65,17 @@
 				cache: false,
 				url: "https://api.instagram.com/v1/tags/" + hashtag + "/media/recent?client_id=6733d5f2ae4345c9a3e73be491f4293c",
 				success: function(data)  {
-					if(data.meta.code === 400){
+					console.log(data.data.length);
+					if(data.data.length == '0'){
+						console.log("nada encontrado");
+						$("#instagram").empty();
+						$("#instagram").append("<span class='bg-warning col-md-offset-5'><span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> Nothing found</span>");
+					}else if(data.meta.code === 400){
+						$("#instagram").empty();
 						$("#instagram").append("<span class='bg-warning col-md-offset-5'> <span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> "+ data.meta.error_message+"</span>");
 					}else{
+						$("#instagram").empty();
 						for (var i = 0; i < 20; i++) {
-							console.log(data.data[i]);
-
 							var date = new Date(data.data[i].created_time * 1000);
 							var months = ['Jan','Fev','Mar','Abr','Mai','Jun','Jul','Aug','Set','Out','Nov','Dec'];
 							var year = date.getFullYear();
@@ -74,10 +85,15 @@
 
 							$("#instagram").append("<div class='card'><a href='" + data.data[i].link +"' target='_blank'><img class='md-col-6' alt='"+ data.data[i].user.username +"' src='" + data.data[i].images.thumbnail.url +"' ></a><br><p>@"+data.data[i].user.username+"<small><br> "+ time +" - via instagram</small></p></div>");
 						}
+						data = [];
 					}
 				}
 			});
 		}
+		<!-- habilitar botão --> 
+		$("#search").empty();
+		$("#search").append("<input type='submit' class='btn btn-primary' onclick='search()'>Buscar</input>");
+		
 	}
 </script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
