--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<div class="col-md-offset-1 col-md-10 container">
 
 			<form class="busca col-md-offset-3 col-md-6">
-				<label></label><br>
-				<div class="input-group">
+				<div class="input-group col-md-11">
 					<span class="input-group-addon" id="basic-addon1">#</span>
 					<input id="hashtag" class="form-control" type="text" placeholder="put a hashtag">
 					<span id="search" class="input-group-btn">
