--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 
 
-	<footer class="navbar-fixed-bottom"><p>powered by <strong>Lucas Nogueira</strong> - version 0.1.1</p>
+	<footer class="navbar-fixed-bottom"><p>powered by <strong>Lucas Nogueira</strong> - version 0.1.2</p>
 	</footer>
 
 	<script type="text/javascript">
@@ -64,14 +64,15 @@
 				cache: false,
 				url: "https://api.instagram.com/v1/tags/" + hashtag + "/media/recent?client_id=6733d5f2ae4345c9a3e73be491f4293c",
 				success: function(data)  {
-					console.log(data.data.length);
-					if(data.data.length == '0'){
+					//console.log(data);
+					//trocar ordem dos if
+					if(data.meta.code === 400){
+						$("#instagram").empty();
+						$("#instagram").append("<span class='bg-warning col-md-offset-5'> <span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> "+ data.meta.error_message+"</span>");
+					}else if(data.data.length == '0'){
 						console.log("nada encontrado");
 						$("#instagram").empty();
 						$("#instagram").append("<span class='bg-warning col-md-offset-5'><span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> Nothing found</span>");
-					}else if(data.meta.code === 400){
-						$("#instagram").empty();
-						$("#instagram").append("<span class='bg-warning col-md-offset-5'> <span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span> "+ data.meta.error_message+"</span>");
 					}else{
 						$("#instagram").empty();
 						for (var i = 0; i < 20; i++) {
