--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
  
  <div class="header">
  </div>
- <h2 class="title">Guia Pedagógico:<h3 class="subtitle">ACOMPANHANDO O PROCESSO DE APRENDIZAGEM NO FÓRUM</h3></h2>
+ <h2 class="title">Guia Pedagógico:
+ <div class="subtitle">ACOMPANHANDO O PROCESSO DE APRENDIZAGEM NO FÓRUM</div>
+ </h2>
  
   
   <section class="content">
