--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     </div>
   </section>
   
-  <script src="script.js"></script>
+<!--  <script src="script.js"></script>-->
   <script src="vendor/bootstrap/bootstrap.min.js"></script>
   
 </body>
